2016-07-02  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.4.

2015-11-21  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlVersion.cpp: in order to enable deterministic builds the
        EbmlCodeDate variable has been set to "Unknown" instead of the
        date and time of compilation. Patch by Ed Schouten <ed@nuxi.nl>.

2015-11-18  Moritz Bunkus  <moritz@bunkus.org>

        * libebml_t.h: use C99-style integer typedefs instead of BSD-style
        ones. Patch by Ed Schouten <ed@nuxi.nl>.

2015-10-24  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlBinary.h: add #include <cstdlib> for compilation with clang
        and libc++. Patch by Thomas Klausner <wiz@NetBSD.org>.

2015-10-20  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.3.

        * EbmlMaster::Read(): When the parser encountered a deeply nested
        element with an infinite size then a following element of an upper
        level was not propagated correctly. Instead the element with the
        infinite size was added into the EBML element tree a second time
        resulting in memory access after freeing it and multiple attempts
        to free the same memory address during destruction. Fixes the
        issue reported as Cisco TALOS-CAN-0037.

        * EbmlElement::ReadCodedSizeValue(): Fixed an invalid memory
        access. When reading a EBML variable length integer value a read
        access beyond the end of the available buffer was possible if
        fewer bytes were available than indicated by the first byte
        resulting in a heap information leak.

        * EbmlUnicodeString::UpdateFromUTF8(): Fixed an invalid memory
        access. When reading from a UTF-8 string in which the length
        indicated by a UTF-8 character's first byte exceeds the string's
        actual number of bytes the parser would access beyond the end of
        the string resulting in a heap information leak. Fixes the issue
        reported as Cisco TALOS-CAN-0036.
