@@ -1,3 +1,8 @@
+2016-07-15  Moritz Bunkus  <moritz@bunkus.org>
+
+        * Replaced the outdated address of the Free Software Foundation
+        with their current one. Fixes #15.
+
 2016-07-02  Moritz Bunkus  <moritz@bunkus.org>
 
         * Released v1.3.4.
